kyverno/policies/argocd/test/patched-add-ignore-resource-updates-annotation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: not-matched
  labels:
    app: test
  name: deploy-with-argocd-tracking
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      annotations:
        argocd.argoproj.io/ignore-resource-updates: "true"
      labels:
        app: test
    spec:
      containers:
        - image: test:1.14.2
          name: test
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: not-matched
  labels:
    k8s-app: test
  name: with-argocd-tracking
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: test
  template:
    metadata:
      annotations:
        argocd.argoproj.io/ignore-resource-updates: "true"
      labels:
        name: test
    spec:
      containers:
        - image: quay.io/test:v2.5.2
          name: test
---
apiVersion: batch/v1
kind: CronJob
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: not-matched
  name: with-argocd-tracking
  namespace: default
spec:
  jobTemplate:
    metadata:
      annotations:
        argocd.argoproj.io/ignore-resource-updates: "true"
    spec:
      template:
        metadata:
          annotations:
            argocd.argoproj.io/ignore-resource-updates: "true"
        spec:
          containers:
            - image: busybox:1.28
              name: test
  schedule: "* * * * *"
