kyverno/policies/argocd/test/patched-test-add-ignore-resource-updates-annotation-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    argocd.argoproj.io/ignore-resource-updates: "true"
  name: in-valid-ns
  namespace: do-not-exit
spec:
  containers:
    - name: test
  initContainers:
    - image: test:v0.9.1
