kyverno/policies/argocd/test/test-application-field-validation.yaml
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-missing-project-name
spec:
  destination:
    namespace: argocd
  source:
    repoURL: git@github.com:utilitywarehouse/something
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-default-project
spec:
  project: default
  destination:
    namespace: argocd
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-missing-source-path
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  source:
    repoURL: git@github.com:utilitywarehouse/something
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-source-path-specified
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  source:
    repoURL: git@github.com:utilitywarehouse/something
    path: dev
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-multiple-source-path-specified
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  sources:
    - repoURL: git@github.com:utilitywarehouse/something
      path: dev
    - repoURL: git@github.com:utilitywarehouse/something_else
      path: dev
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-source-and-sources-both-specified
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  source:
    repoURL: git@github.com:utilitywarehouse/something
    path: dev
  sources:
    - repoURL: git@github.com:utilitywarehouse/something
      path: dev
    - repoURL: git@github.com:utilitywarehouse/something_else
      path: dev
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-source-path-chart-specified
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  source:
    repoURL: git@github.com:utilitywarehouse/something
    path: dev
    chart: dev
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-sources-chart-specified
spec:
  project: prj-sys-argocd
  destination:
    namespace: argocd
  sources:
    - repoURL: git@github.com:utilitywarehouse/something
      path: dev
    - repoURL: git@github.com:utilitywarehouse/something_else
      chart: dev
---
apiVersion: argoproj.io/v1alpha1
kind: Application
metadata:
  name: test-missing-destination-namespace
spec:
  project: prj-sys-argocd
  destination:
    server: https://kubernetes.default.svc
  source:
    repoURL: git@github.com:utilitywarehouse/something
    path: dev
