kyverno/policies/argocd/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test-argocd-policies
policies:
  - ../application-field-validation.yaml
resources:
  - test-application-field-validation.yaml
results:
  - policy: argocd-application-field-validation
    kind: Application
    resources: ["test-default-project"]
    result: fail

  - policy: argocd-application-field-validation
    kind: Application
    resources: ["test-missing-project-name"]
    result: fail

  - policy: argocd-application-field-validation
    kind: Application
    resources:
      ["test-missing-source-path", "test-source-and-sources-both-specified"]
    result: fail

  - policy: argocd-application-field-validation
    kind: Application
    resources:
      ["test-source-path-specified", "test-multiple-source-path-specified"]
    result: pass

  - policy: argocd-application-field-validation
    kind: Application
    resources:
      ["test-source-path-chart-specified", "test-sources-chart-specified"]
    result: fail

  - policy: argocd-application-field-validation
    kind: Application
    resources: ["test-missing-destination-namespace"]
    result: fail
